# os_test

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  limine.conf  linker_x86_64.ld  pass_var_to_make.py  target_x86_64.json
.cargo/: config.toml
ovmf/: ovmf-code.fd  ovmf-vars.fd
src/: acpi.rs  arch_x86_64.rs  console.rs  cpu.rs  hexdump.rs  idt.rs  interrupts.rs  io.rs  lib.rs  main.rs  msr.rs  panic.rs  qemu_log.rs  screen.rs  stack_trace.rs  test.rs  time.rs
src/dev/: hpet.rs  ioapic.rs  local_apic.rs  mod.rs
src/fs/: mod.rs  path.rs  ramfs.rs  vfs.rs
src/memory/: allocator.rs  mod.rs  paging.rs  physical.rs  virt.rs
